--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -1,34 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>제품리스트</h1>
-    <h2>{{now}}</h2>
-    <h2>{{daina}}</h2>
+{% extends 'base.html' %}
+{% block title %}{% endblock title %}
 
-    {%for product in products%}
-    <p>{{product.name_ko}}</p>
-    <p>{{product.name_en}}</p>
+{% block contents %}
+<h3>스타일</h3>
 
-    {%for product_image in product.photo_set.all %}
-    <img src="{{product_image.image.url}}" alt="상품사진" style = "width:100px; height: 100px"/>
-    {%endfor%} {%endfor%}
+{% endblock contents %}
 
-    <h5>
-      {% if page_obj.has_previous %}
-      <a href = "?page={{page_obj.number|add:"-1"}}">Previous</a>
-      {% endif %}
-
-      현재 페이지: {{page_obj.number}}/ 총 페이지: {{page_obj.paginator.num_pages}}
-
-      
-      {% if page_obj.has_next %}
-      <a href = "?page={{page_obj.number|add:"1"}}">Next</a>
-      {% endif %}
-  </body>
-</html>
