--- a/templates/style/style_list.html
+++ b/templates/style/style_list.html
@@ -3,23 +3,33 @@
 
 {% block contents %}
 <h3>스타일</h3>
-{% for style in styles %}
-<h5>작성자: {{style.user}}</h5>
-{% for photo in style.photo_set.all %}
-<img src = "{{photo.image.url}}" alt="{{style.user}}" />
-{% endfor %}
 
-<h5>{{style.comment}}</h5>
-<hr>
-<p>상품태그 {{style.count_style}}개</p>
+<div class="style_list_box">
+<div class="style_list">
+    {% for style in styles %}
+    <div class="style">
+            {% for photo in style.photo_set.all %}
+            <img src = "{{photo.image.url}}" alt="{{style.user}}" class="photo_user" />
+            {% endfor %}
+        <p class="user">😄
+            {% comment %} <img scr="{{style.user.avatar.image.url}}" alt="상품사진"> {% endcomment %}
+            {{style.user}}</p>
+        <p class="comment">❤️ {{style.comment}}</p>
+        <p class="number_tag">👕 태그된 상품의 수: {{style.count_style}}개</p>
 
-{% for product in style.product.all %}
-<img src="{{product.photo_set.first.image.url}}" alt = "상품사진" />
-<p>{{product.name_en}}</p>
-<p>{{product.released_price}}원</p>
-{% endfor %} 
-
-{% endfor %}
-
-
+        <div class="product_list_box">
+            {% for product in style.product.all %}
+                <div class="product_list"> 
+                    <img src="{{product.photo_set.first.image.url}}" alt = "상품사진" class="photo" />
+                    <div class="product_info">
+                        <p class="product_name">{{product.name_en}}</p>
+                        <p>{{product.released_price}}원</p>
+                    </div>
+                </div>
+            {% endfor %} 
+        </div>
+    </div>
+    {% endfor %}
+</div>
+</div>
 {% endblock contents %}
