--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -1,1 +1,13 @@
-<header>KREAM</header>
+<header>KREAM
+<div>
+    <a href = "#">고객센터</a>
+    <a href = "#">관심상품</a>
+    <a href = "#">마이페이지</a>
+    {% if user.is_authenticated %}
+    <a href = "{% url 'users:logout' %}">로그아웃</a>
+    {% else %}
+    <a href = "{% url 'users:login' %}">로그인</a>
+     {% endif %}
+</div>
+
+</header>
