--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -1,19 +1,34 @@
 {% extends 'base.html' %} 
 {% block contents %}
 {% comment %} <h1>{{now}}</h1> {% endcomment %}
-<h1>제품리스트</h1>
+{% comment %} <p>제품리스트임</p> {% endcomment %}
 
 <div class="product_list_box">
 <div class="product_list">
 {% for product in products %}
     <div class="product">
         <img src="{{product.photo_set.first.image.url}}" alt="상품사진" class="photo">
-        <div class="product_detail">
+        <div class="product_detail_detail">
             <p class="product_brand">{{product.brand}}</p>
             <p class="product_list_name"><a href="{% url "products:detail" product.pk %}">{{product.name_en}}</a></p>
-            <p class="product_list_name">{{product.name_ko}}</p>
+            <p class="product_list_name" style="color: gray;">{{product.name_ko}}</p>
             <p class="product_price">{{product.released_price}}원</p>
             <p class="present_price">즉시구매가</p>
+            <div class="fast__btn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="17"
+                  height="17"
+                  fill="#31b46e"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M16.168 2.924L4.51 13.061a.25.25 0 00.164.439h5.45a.75.75 0 01.692 1.041l-2.559 6.066 11.215-9.668a.25.25 0 00-.164-.439H14a.75.75 0 01-.687-1.05l2.855-6.526zm-.452-1.595a1.341 1.341 0 012.109 1.55L15.147 9h4.161c1.623 0 2.372 2.016 1.143 3.075L8.102 22.721a1.149 1.149 0 01-1.81-1.317L8.996 15H4.674c-1.619 0-2.37-2.008-1.148-3.07l12.19-10.6z"
+                  ></path>
+                </svg>
+                <p>빠른배송</p>
+            </div>
             <p class="product_comment">✅100  📝200</p>
         </div>    
     </div>    
