--- a/static/css/product.css
+++ b/static/css/product.css
@@ -1,3 +1,9 @@
+div,
+p {
+  line-height: 1;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
 .product_list_box {
   margin: 0px auto;
   /* background-color: aqua; */
