--- a/templates/partial/header.html
+++ b/templates/partial/header.html
@@ -16,8 +16,8 @@
             <img src="/static/img/kream_logo.png" alt="로고사진" style="width: 130px;">
         </div>
         <div class="logo__items" style="display: flex; gap: 30px; text-align: center; align-items: center">
-            <p><a href="">STYLE</a></p>
-            <p><a href="">SHOP</a></p>
+            <p><a href="/styles/">STYLE</a></p>
+            <p><a href="/products/">SHOP</a></p>
             <p><a href="">ABOUT</a></p>
             <p>
             <svg
