--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -17,6 +17,7 @@
         <div class="product_detail_box" style="border-bottom: 1px solid lightgray;">
             <p>사이즈</p>
             <p class="product_detail_ps">모든사이즈</p>
+            <button class="btn">사이즈보기버튼</button>
         </div>
         <div class="product_detail_box">
             <p>최근거래가</p>
