--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-.style_list {
+.style_card_list {
   margin: 0px auto;
   width: 90%;
   display: flex;
@@ -6,57 +6,62 @@
   /* display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 20px; */
-  background-color: rgb(210, 126, 16);
 }
 
-.style {
+.style_card {
   height: fit-content;
   width: 24%;
   /* grid-row-start: 1; */
 }
-.photo_user {
+.style_photo_user {
   width: 100%;
   object-fit: cover;
   border-radius: 5%;
+  margin-bottom: 5px;
 }
-.user {
+.style_list_user {
   font-size: 14px;
   margin-top: 2px;
   margin-bottom: 0px;
 }
-.comment {
+.style_list_comment {
   /* background-color: antiquewhite; */
-  margin-top: 3px;
-  margin-bottom: 5px;
+  margin-top: 8px;
+  padding-bottom: 5px;
   font-size: 14px;
   border-bottom: solid 1px black;
 }
-.product_name {
+.style_product_name {
   width: 100%;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   white-space: normal;
   overflow: hidden;
-}
-.number_tag {
+  padding: 2px 0px;
+/}
+.style_number_tag {
   font-size: 15px;
   margin: 5px 0px;
+  padding: 5px 0px;
   /* background-color: blanchedalmond; */
 }
 
-.product_list {
+.style_product_list {
   width: 100%;
   display: flex;
   margin-bottom: 10px;
 }
-.photo {
+.style_product_photo {
   width: 30%;
   object-fit: cover;
   border-radius: 15%;
 }
-.product_info {
+.style_product_info {
   width: 70%;
   margin-left: 10px;
   font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
