--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -1,1 +1,50 @@
-<footer>&copy;kream</footer>
+<footer>
+    <div class="footer_top_box">
+        <div class="footer_top">
+            <div class="footer_top_list">
+                <div class="footer_list_title">이용안내</div>
+                <p>검수기준</p>
+                <p>이용정책</p>
+                <p>페널티 정책</p>
+                <p>커뮤니티 가이드라인</p>
+            </div>
+            <div class="footer_top_list" style="padding-left: 80px">
+                <div class="footer_list_title">고객지원</div>
+                <p>공지사항</p>
+                <p>서비스 소개</p>
+                <p>쇼룸 안내</p>
+                <p>판매자 방문접수</p>
+            </div>
+        </div>
+        <div>
+            <div class="footer_top_list">
+                <div class="footer_list_title">고객센터 1588-7813</div>
+                <p style="margin-bottom: 5px;">운영시간평일 11:00 - 18:00 (토 ∙ 일, 공휴일 휴무)</p>
+                <p>점심시간평일 13:00 - 14:00</p>
+                <p style="color: black">1:1 문의하기는 앱에서만 가능합니다.</p>
+                <button class="question_btn">자주 묻는 질문</button>
+            </div>    
+        </div>
+    </div>
+    <div class="line"></div>
+    <div>
+        <div>
+            <p>회사소개</p>
+            <p>인재채용</p>
+            <p>제휴제안</p>
+            <p>이용약관</p>
+            <p>개인정보처리방침</p>
+        </div>
+        <div>
+            icon
+            icon
+            icon
+        </div>
+    </div>
+    <p>크림 주식회사 · 대표김창욱사업자등록번호:570-88-01618사업자정보확인통신판매업:제 2021-성남분당C-0093호</p>
+    <p>사업장소재지:경기도 성남시 분당구 분당내곡로 117, 8층개인정보관리책임자:김미진호스팅 서비스:네이버 클라우드 (주)</p>
+    <p>크림(주)는 통신판매 중개자로서 통신판매의 당사자가 아니므로 개별 판매자가 등록한 상품정보에 대해서 책임을 지지 않습니다. 단, 거래과정에서 검수하고 보증하는 내용에 대한 책임은 당사에 있습니다.</p>
+    <div>
+        &copy;kream
+    </div>
+</footer>
