--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,6 +4,7 @@
 {% block contents %}
 <h1>로그인페이지임</h1>
 <form method="post" action="{% url "users:login" %}">
+    <br>
     {% csrf_token %}
     {% comment %} <input type="email" name="email" placeholder="예)  kream@kream.co.kr">
     <input type="password" name="password"> {% endcomment %}
@@ -18,8 +19,13 @@
         {% endif %}
     </p>
     {% endfor %}
-    <input type="submit" value="로그인">
+    <br>
+    <input class="login_box" type="submit" value="로그인">
+    <br>
     {% comment %} <input type="date" name="date"> {% endcomment %}
     {% comment %} <button type="submit">로그인</button>는 11줄과 같은 의미{% endcomment %}
+    <div class="login_box">
+        <a href="{% url 'users:kakao-login' %}">카카오로그인</a>
+    </div>
 </form>
 {% endblock contents %}
