--- a/static/css/product.css
+++ b/static/css/product.css
@@ -4,6 +4,15 @@ p {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.page_title {
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  font-size: 28px;
+  font-weight: 600;
+  position: sticky;
+  top: 150px;
+}
 .product_list_box {
   margin: 0px auto;
   /* background-color: aqua; */
