--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/item_info.css' %}?after">
     <link rel="stylesheet" href="{% static 'css/detail_check.css' %}?after">
     <link rel="stylesheet" href="{% static 'css/delivery_info.css' %}?after">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}?after">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
