--- a/templates/partial/footer.html
+++ b/templates/partial/footer.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="line"></div>
-    <div>
+    {% comment %} <div>
         <div>
             <p>회사소개</p>
             <p>인재채용</p>
@@ -44,7 +44,7 @@
     <p>크림 주식회사 · 대표김창욱사업자등록번호:570-88-01618사업자정보확인통신판매업:제 2021-성남분당C-0093호</p>
     <p>사업장소재지:경기도 성남시 분당구 분당내곡로 117, 8층개인정보관리책임자:김미진호스팅 서비스:네이버 클라우드 (주)</p>
     <p>크림(주)는 통신판매 중개자로서 통신판매의 당사자가 아니므로 개별 판매자가 등록한 상품정보에 대해서 책임을 지지 않습니다. 단, 거래과정에서 검수하고 보증하는 내용에 대한 책임은 당사에 있습니다.</p>
-    <div>
+    <div> {% endcomment %}
         &copy;kream
     </div>
 </footer>
