--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -3,7 +3,7 @@
 {% block contents %}
 {% comment %} <h1>{{now}}</h1> {% endcomment %}
 {% comment %} <p>제품리스트임</p> {% endcomment %}
-
+<div class="page_title">SHOP</div>
 <div class="product_list_box">
 <div class="product_list">
 {% for product in products %}
